# BlogAppCiCd

./: .dockerignore  .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
docker/blog/: Dockerfile
grpc/: blog.proto
src/blog_server/: main.py  service.py
src/grpc_out/: blog_pb2.py  blog_pb2_grpc.py
test/: test_blog_server.py
