[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["lukerichardson-dev <richardsonluke232@gmail.com>"]

packages = [
    { include = "blog_server", from = "src" },
    { include = "grpc_out", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.44.0"
grpcio = "^1.44.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
